--- a/style.css
+++ b/style.css
@@ -1,6 +1,108 @@
+:root {
+  --color-accent: oklch(65% 50% 0);
+}
+
 body {
-    /* Set line height to 1.5 times the font size
-         and use the OS’s UI font as the website font
-       */
-    font: 100%/1.5 system-ui;
+  display: block;
+  max-width: 100ch;
+  margin-inline: auto;
+  padding: 32px;
+  accent-color: var(--color-accent);
+}
+
+ul.links {
+  display: contents;
+  li {
+    display: contents;
   }
+}
+
+nav {
+  display: flex;
+  margin-bottom: auto;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+  /*text-align: center;
+  justify-content: space-evenly;*/
+}
+
+nav a {
+  flex: 1;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  padding: 0.5em;
+  /*justify-content: space-evenly;*/
+}
+
+nav a.current {
+  margin-bottom: auto;
+  border-bottom-width: 0.4em;
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+  padding-bottom: 0.1em;
+}
+
+nav a:hover {
+  margin-bottom: auto;
+  border-bottom-width: 0.4em;
+  border-bottom-style: solid;
+  border-bottom-color: var(--color-accent);
+  background-color: oklch(from var(--color-accent) 95% 5% h);
+  padding-bottom: 0.1em;
+}
+
+/*form input, textarea, button {
+  font: inherit;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+form label, input, textarea, button{
+  display: block;
+}
+
+form label {
+  margin-block: 10px;
+}*/
+
+form input, textarea, button {
+  font: inherit;
+}
+
+form {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1em;
+  label {
+    display: grid;
+    grid-template-columns: subgrid;
+  }
+  button {
+    grid-column: 1 / -1;
+  }
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+  gap: 1em;
+  article {
+    display: grid;
+    grid-template-rows: subgrid;
+    grid-row: span 3;
+    h2 {
+      margin: 0;
+    }
+  }
+}
+
+h1 {
+  color: rebeccapurple;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.1;
+  text-wrap: balance;
+}
