--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --color-accent: oklch(65% 50% 0);
+  color-scheme: light dark;
 }
 
 body {
@@ -18,11 +19,12 @@ ul.links {
 }
 
 nav {
+  --border-color: oklch(50% 10% 200 / 40%);
   display: flex;
   margin-bottom: auto;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: oklch(80% 3% 200);
+  border-bottom-color: var(--border-color);
   /*text-align: center;
   justify-content: space-evenly;*/
 }
@@ -40,7 +42,7 @@ nav a.current {
   margin-bottom: auto;
   border-bottom-width: 0.4em;
   border-bottom-style: solid;
-  border-bottom-color: oklch(80% 3% 200);
+  border-bottom-color: var(--border-color);
   padding-bottom: 0.1em;
 }
 
