--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ ul.links {
 }
 
 nav {
-  --border-color: oklch(50% 10% 200 / 40%);
+  /* --border-color: oklch(50% 10% 200 / 40%); */
   display: flex;
   margin-bottom: auto;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: var(--border-color);
+  border-bottom-color: oklch(50% 10% 200 / 40%);
   /*text-align: center;
   justify-content: space-evenly;*/
 }
@@ -42,7 +42,7 @@ nav a.current {
   margin-bottom: auto;
   border-bottom-width: 0.4em;
   border-bottom-style: solid;
-  border-bottom-color: var(--border-color);
+  border-bottom-color: oklch(50% 10% 200 / 40%);
   padding-bottom: 0.1em;
 }
 
