--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul.links {
 }
 
 nav {
-  --border-color: oklch(50% 10% 200 / 40%);
+  --border-color: oklch(50% 10% 200 / 40%); /* still not obvious in dark mode */
   display: flex;
   margin-bottom: auto;
   border-bottom-width: 1px;
