--- a/style.css
+++ b/style.css
@@ -108,3 +108,9 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.1;
   text-wrap: balance;
 }
+
+label.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
