--- a/style.css
+++ b/style.css
@@ -113,4 +113,5 @@ label.color-scheme {
   position: absolute;
   top: 1rem;
   right: 1rem;
-}
+  font-size: 80%;
+}/*you can just add select to your existing input, textarea, button rule about that from Lab 2*/
