--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ label.color-scheme {
   font-size: 80%;
 }/*you can just add select to your existing input, textarea, button rule about that from Lab 2*/
 
-select {
+label select {
   font-family: inherit;
   font-size: inherit;
 }
