--- a/style.css
+++ b/style.css
@@ -117,6 +117,5 @@ label.color-scheme {
 }/*you can just add select to your existing input, textarea, button rule about that from Lab 2*/
 
 label select {
-  font-family: inherit;
-  font-size: inherit;
+  font: inherit;
 }
